Using Query Parameters to filter wallet type
